k8s/player-data/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-data
spec:
  replicas: 2
  selector:
    matchLabels:
      app: player-data
  template:
    metadata:
      labels:
        app: player-data
    spec:
      containers:
        - name: app
          image: ghcr.io/pzachary/opusmajor:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /player-data
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /player-data
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
