k8s/player-data/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-data
spec:
  selector:
    app: player-data
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
