k8s/player-data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: player-data
spec:
  ingressClassName: nginx
  rules:
    - host: playerdata.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: player-data
                port:
                  number: 80
